--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <div class="section">
-            <div class="section-title">Markets</div>
+            <div class="Markets">Markets</div>
             <div class="input-group">
                 <span for="symbolSelect">Get the last price of</span>
                 <select id="m_symbolSelect">
@@ -27,7 +27,7 @@
             </div>
         </div>
         <div class="section">
-            <div class="section-title">Trade Setting</div>
+            <div class="Trade-Setting">Trade Setting</div>
             <div class="input-group">
                 <span for="symbolSelect">Symbol</span>
                 <select id="symbolSelect">
@@ -70,7 +70,7 @@
             </div>
         </div>
         <div class="section">
-            <div class="section-title">Stop Loss Setting</div>
+            <div class="Stop-Loss-Setting">Stop Loss Setting</div>
             <div class="input-group">
                 <span for="symbolSelect">Symbol</span>
                 <select id="sl_symbolSelect">
@@ -88,7 +88,7 @@
             </div>
         </div>
         <div class="section">
-            <div class="section-title">Take Profit Setting</div>
+            <div class="Take-Profit-Setting">Take Profit Setting</div>
             <div class="input-group">
                 <span for="symbolSelect">Symbol</span>
                 <select id="tp_symbolSelect">
@@ -106,7 +106,7 @@
             </div>
         </div>
         <div class="section">
-            <div class="section-title">Trade Queue Cancelling</div>
+            <div class="Trade-Queue-Cancelling">Trade Queue Cancelling</div>
             <div class="input-group">
                 <span for="symbolSelect">Cancel queued trade of</span>
                 <select id="ct_symbolSelect">
@@ -120,7 +120,7 @@
             </div>
         </div>
         <div class="section">
-            <div class="section-title">Open Orders Cancelling</div>
+            <div class="Open-Orders-Cancelling">Open Orders Cancelling</div>
             <div class="input-group">
                 <span for="symbolSelect">Cancel open orders for</span>
                 <select id="c_symbolSelect">
@@ -134,7 +134,7 @@
             </div>
         </div>
         <div class="section">
-            <div class="section-title">Position Closing</div>
+            <div class="Position-Closing">Position Closing</div>
             <div class="input-group">
                 <span for="symbolSelect">Close open position of</span>
                 <select id="close_symbolSelect">
@@ -148,7 +148,7 @@
             </div>
         </div>
         <div class="section">
-            <div class="section-title">Other Options</div>
+            <div class="Other-Options">Other Options</div>
             <div class="button-container">
                 <button class="button button-blue" onclick="sendList()">List Trade Queue</button>
             </div>
