--- a/index.html
+++ b/index.html
@@ -39,26 +39,26 @@
             <div class="input-group">
                 <span for="leverageSelect">Leverage</span>
                 <select id="leverageSelect">
-                    <option value="1x">1x</option>
-                    <option value="2x">2x</option>
-                    <option value="3x">3x</option>
-                    <option value="4x">4x</option>
-                    <option value="5x">5x</option>
-                    <option value="6x">6x</option>
-                    <option value="7x">7x</option>
-                    <option value="8x">8x</option>
-                    <option value="9x">9x</option>
-                    <option value="10x">10x</option>
-                    <option value="11x">11x</option>
-                    <option value="12x">12x</option>
-                    <option value="13x">13x</option>
-                    <option value="14x">14x</option>
-                    <option value="15x">15x</option>
-                    <option value="16x">16x</option>
-                    <option value="17x">17x</option>
-                    <option value="18x">18x</option>
-                    <option value="19x">19x</option>
-                    <option value="20x">20x</option>
+                    <option value="1">1x</option>
+                    <option value="2">2x</option>
+                    <option value="3">3x</option>
+                    <option value="4">4x</option>
+                    <option value="5">5x</option>
+                    <option value="6">6x</option>
+                    <option value="7">7x</option>
+                    <option value="8">8x</option>
+                    <option value="9">9x</option>
+                    <option value="10">10x</option>
+                    <option value="11">11x</option>
+                    <option value="12">12x</option>
+                    <option value="13">13x</option>
+                    <option value="14">14x</option>
+                    <option value="15">15x</option>
+                    <option value="16">16x</option>
+                    <option value="17">17x</option>
+                    <option value="18">18x</option>
+                    <option value="19">19x</option>
+                    <option value="20">20x</option>
                 </select>
             </div>
             <div class="input-group">
