--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </div>
         </div>
         <div class="section">
-            <div class="Stop-Loss-Setting">Stop Loss Setting</div>
+            <div class="Stop-Loss-Setting">Stop-Loss Setting</div>
             <div class="input-group">
                 <span for="symbolSelect">Symbol</span>
                 <select id="sl_symbolSelect">
@@ -88,7 +88,7 @@
             </div>
         </div>
         <div class="section">
-            <div class="Take-Profit-Setting">Take Profit Setting</div>
+            <div class="Take-Profit-Setting">Take-Profit Setting</div>
             <div class="input-group">
                 <span for="symbolSelect">Symbol</span>
                 <select id="tp_symbolSelect">
