--- a/index.html
+++ b/index.html
@@ -150,6 +150,9 @@
         <div class="section">
             <div class="Other-Options">Other Options</div>
             <div class="button-container">
+                <button class="button button-blue" onclick="sendCheck()">Check My Balance</button>
+            </div>
+            <div class="button-container">
                 <button class="button button-blue" onclick="sendList()">List Trade Queue</button>
             </div>
             <div class="button-container">
