--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Crypto Trader</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.16/dist/sweetalert2.min.css">
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.16/dist/sweetalert2.all.min.js"></script>
 </head>
 
 <body>
@@ -163,7 +165,6 @@
                 <h6 style="text-align: center;">Note that open orders do not contain the trade queue.</h6>
             </div>
         </div>
-        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.16/dist/sweetalert2.all.min.js"></script>
         <script src="script.js"></script>
     </div>
 </body>
