--- a/a/index.html
+++ b/a/index.html
@@ -8,6 +8,7 @@
     <title>Crypto Trader</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.16/dist/sweetalert2.min.css">
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 
 <body>
