--- a/a/index.html
+++ b/a/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.16/dist/sweetalert2.min.css">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <script src="https://puzzlebot.top/webapp.js"></script>
 </head>
 
 <body>
