--- a/a/index.html
+++ b/a/index.html
@@ -14,6 +14,8 @@
 
 <body>
     <div class="container">
+        <button onclick="PuzzleBot.sendCommand('/start');">/start</button>
+            
         <div class="section">
             <div class="Markets">Markets</div>
             <div class="input-group">
