--- a/maintain.html
+++ b/maintain.html
@@ -64,17 +64,14 @@
             return urlParams.get('id');
             }
             const mainButton = window.Telegram.WebApp.MainButton;
-            mainButton.text = "Save Preferences";
+            mainButton.text = "Generate New Session";
             mainButton.enable();
             mainButton.show();
             mainButton.onClick(function () {
-                const symbolSelect = document.getElementById("m_symbolSelect");
-                const m_symbol = symbolSelect.value;
                 const chat_id = getChatId();
                 if (chat_id) {
                     const id = chat_id;
                     const data = {
-                        m_symbol: m_symbol,
                         id: id,
                     };
                     try {
