--- a/maintain.html
+++ b/maintain.html
@@ -64,7 +64,7 @@
             return urlParams.get('id');
             }
             const mainButton = window.Telegram.WebApp.MainButton;
-            mainButton.text = "Generate New Session";
+            mainButton.text = "Request New Session";
             mainButton.enable();
             mainButton.show();
             mainButton.onClick(function () {
