--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="container">
         <div class="section">
-            <div class="Markets">Markets</div>
+            <div class="Markets"><strong>Markets</strong></div>
             <div class="input-group">
                 <span for="symbolSelect">Get the last price of</span>
                 <select id="m_symbolSelect">
