--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
         </div>
         <div class="section">
-            <div class="Trade-Setting">Trade Setting</div>
+            <div class="Trade-Setting"><strong>Trade Setting</strong></div>
             <div class="input-group">
                 <span for="symbolSelect">Symbol</span>
                 <select id="symbolSelect">
@@ -72,7 +72,7 @@
             </div>
         </div>
         <div class="section">
-            <div class="Stop-Loss-Setting">Stop-Loss Setting</div>
+            <div class="Stop-Loss-Setting"><strong>Stop-Loss Setting</strong></div>
             <div class="input-group">
                 <span for="symbolSelect">Symbol</span>
                 <select id="sl_symbolSelect">
@@ -90,7 +90,7 @@
             </div>
         </div>
         <div class="section">
-            <div class="Take-Profit-Setting">Take-Profit Setting</div>
+            <div class="Take-Profit-Setting"><strong>Take-Profit Setting</strong></div>
             <div class="input-group">
                 <span for="symbolSelect">Symbol</span>
                 <select id="tp_symbolSelect">
@@ -108,7 +108,7 @@
             </div>
         </div>
         <div class="section">
-            <div class="Trade-Queue-Cancelling">Trade Queue Cancelling</div>
+            <div class="Trade-Queue-Cancelling"><strong>Trade Queue Cancelling</strong></div>
             <div class="input-group">
                 <span for="symbolSelect">Cancel queued trade of</span>
                 <select id="ct_symbolSelect">
@@ -122,7 +122,7 @@
             </div>
         </div>
         <div class="section">
-            <div class="Open-Orders-Cancelling">Open Orders Cancelling</div>
+            <div class="Open-Orders-Cancelling"><strong>Open Orders Cancelling</strong></div>
             <div class="input-group">
                 <span for="symbolSelect">Cancel open orders for</span>
                 <select id="c_symbolSelect">
@@ -136,7 +136,7 @@
             </div>
         </div>
         <div class="section">
-            <div class="Position-Closing">Position Closing</div>
+            <div class="Position-Closing"><strong>Position Closing</strong></div>
             <div class="input-group">
                 <span for="symbolSelect">Close open position of</span>
                 <select id="close_symbolSelect">
@@ -146,11 +146,11 @@
                 </select>
             </div>
             <div class="button-container">
-                <button class="button" onclick="sendClose()">Close Position</button>
+                <button class="button" onclick="sendClose()"><strong>Close Position</strong></button>
             </div>
         </div>
         <div class="section">
-            <div class="Other-Options">Other Options</div>
+            <div class="Other-Options"><strong>Other Options</strong></div>
             <div class="button-container">
                 <button class="button button-blue" onclick="sendCheck()">Check My Balance</button>
             </div>
