--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 </select>
             </div>
             <div class="button-container">
-                <button class="button" onclick="sendClose()"><strong>Close Position</strong></button>
+                <button class="button" onclick="sendClose()">Close Position</button>
             </div>
         </div>
         <div class="section">
