--- a/maintain.html
+++ b/maintain.html
@@ -53,10 +53,11 @@
         <main>
             <p>We advise clients to reset their sessions now and then because it can be helpful for a few reasons:</p>
             <ul>
-                <li><strong>Extra Security:</strong> Adds an extra layer of security, making it tougher for anyone to pretend to be you or mess with your data.</li>
+                <li><strong>Extra Security:</strong> Adds an extra layer of security, by making it more difficult for someone to impersonate you or tamper with your information.</li>
                 <li><strong>Privacy Boost:</strong> Maintains the privacy of sensitive information.</li>
                 <li><strong>Improved Functionality:</strong> Provides a more seamless experience and can help resolve certain issues.</li>
             </ul>
+            <h5>Note that changing sessions will not affect your operations.</h5>
         </main>
         <script>
             function getChatId() {
