--- a/maintain.html
+++ b/maintain.html
@@ -51,7 +51,7 @@
             <h1>Reset Sessions Advisory</h1>
         </header>
         <main>
-            <p>We advise clients to reset their sessions now and then because it can be helpful for a few reasons:</p>
+            <p>We advise our clients to reset their sessions now and then because it can be helpful for a few reasons:</p>
             <ul>
                 <li><strong>Extra Security:</strong> Adds an extra layer of security, by making it more difficult for someone to impersonate you or tamper with your information.</li>
                 <li><strong>Privacy Boost:</strong> Maintains the privacy of sensitive information.</li>
