--- a/maintain.html
+++ b/maintain.html
@@ -57,7 +57,7 @@
                 <li><strong>Privacy Boost:</strong> Maintains the privacy of sensitive information.</li>
                 <li><strong>Improved Functionality:</strong> Provides a more seamless experience and can help resolve certain issues.</li>
             </ul>
-            <h6 style="text-align: center;">Note that changing sessions will not affect your operations.</h6>
+            <h6>Note that changing sessions will not affect your operations.</h6>
         </main>
         <script>
             function getChatId() {
