--- a/a/m.html
+++ b/a/m.html
@@ -96,6 +96,16 @@
         document.getElementById('privacyText').innerText = strings.privacy;
         document.getElementById('functionalityText').innerText = strings.functionality;
         document.getElementById('noteText').innerText = strings.note;
+
+        // Hide elements not in the selected language
+        const allElements = document.querySelectorAll('.language-dependent');
+        allElements.forEach(element => {
+            element.style.display = 'none';
+        });
+        const elementsToShow = document.querySelectorAll(`.${language}-text`);
+        elementsToShow.forEach(element => {
+            element.style.display = 'block';
+        });
     }
 
     // Function to set language preference cookie
