--- a/a/m.html
+++ b/a/m.html
@@ -58,14 +58,20 @@
     </select>
 </header>
 <main>
-    <p id="advisoryText">ننصح عملائنا بإعادة تعيين جلساتهم الآن ومن ثم لأنه يمكن أن يكون مفيدًا لعدة أسباب:</p>
+    <p class="language-text en-text" id="advisoryTextEN">We advise our clients to reset their sessions now and then because it can be helpful for a few reasons:</p>
+    <p class="language-text ar-text" id="advisoryTextAR">ننصح عملائنا بإعادة تعيين جلساتهم الآن ومن ثم لأنه يمكن أن يكون مفيدًا لعدة أسباب:</p>
     <ul>
-        <li><strong id="securityText">أمان إضافي:</strong> يضيف طبقة إضافية من الأمان، عن طريق جعل الأمر أكثر صعوبة بالنسبة لشخص ما لاختراقك أو التلاعب بمعلوماتك.</li>
-        <li><strong id="privacyText">زيادة الخصوصية:</strong> يحافظ على خصوصية المعلومات الحساسة.</li>
-        <li><strong id="functionalityText">تحسين الوظائف:</strong> يوفر تجربة أكثر سلاسة ويمكن أن يساعد في حل بعض المشاكل.</li>
+        <li class="language-text en-text" id="securityTextEN"><strong>Extra Security:</strong> Adds an extra layer of security, by making it more difficult for someone to impersonate you or tamper with your information.</li>
+        <li class="language-text ar-text" id="securityTextAR"><strong>أمان إضافي:</strong> يضيف طبقة إضافية من الأمان، عن طريق جعل الأمر أكثر صعوبة بالنسبة لشخص ما لاختراقك أو التلاعب بمعلوماتك.</li>
+        <li class="language-text en-text" id="privacyTextEN"><strong>Privacy Boost:</strong> Maintains the privacy of sensitive information.</li>
+        <li class="language-text ar-text" id="privacyTextAR"><strong>زيادة الخصوصية:</strong> يحافظ على خصوصية المعلومات الحساسة.</li>
+        <li class="language-text en-text" id="functionalityTextEN"><strong>Improved Functionality:</strong> Provides a more seamless experience and can help resolve certain issues.</li>
+        <li class="language-text ar-text" id="functionalityTextAR"><strong>تحسين الوظائف:</strong> يوفر تجربة أكثر سلاسة ويمكن أن يساعد في حل بعض المشاكل.</li>
     </ul>
-    <h6 id="noteText">يرجى ملاحظة أن تغيير الجلسات لن يؤثر على عملياتك.</h6>
+    <h6 class="language-text en-text" id="noteTextEN">Note that changing sessions will not affect your operations.</h6>
+    <h6 class="language-text ar-text" id="noteTextAR">يرجى ملاحظة أن تغيير الجلسات لن يؤثر على عملياتك.</h6>
 </main>
+
 <script>
     // Language strings
     const languageStrings = {
