--- a/a/m.html
+++ b/a/m.html
@@ -19,7 +19,6 @@
             color: #fff;
             text-align: center;
             padding: 1em;
-            direction: rtl; /* Right to left */
         }
 
         main {
@@ -29,13 +28,12 @@
             background-color: #fff;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            direction: rtl; /* Right to left */
         }
 
         ul {
             list-style-type: none;
             padding: 0;
-            text-align: right; /* Right-align list items */
+            text-align: right;
         }
 
         li {
@@ -51,7 +49,7 @@
 </head>
 <body>
 <header>
-    <h1 id="headerText">نصيحة إعادة تعيين الجلسات</h1>
+    <h1 id="headerText" dir="ltr">Reset Sessions Advisory</h1>
     <select id="languageSelector">
         <option value="en">English</option>
         <option value="ar">العربية</option>
@@ -59,17 +57,17 @@
 </header>
 <main>
     <p class="language-text ar-text" id="advisoryTextAR">ننصح عملائنا بإعادة تعيين جلساتهم الآن ومن ثم لأنه يمكن أن يكون مفيدًا لعدة أسباب:</p>
-    <p class="language-text en-text" id="advisoryTextEN" style="direction: ltr;">We advise our clients to reset their sessions now and then because it can be helpful for a few reasons:</p>
+    <p class="language-text en-text" id="advisoryTextEN" dir="ltr" style="display: none;">We advise our clients to reset their sessions now and then because it can be helpful for a few reasons:</p>
     <ul>
         <li class="language-text ar-text" id="securityTextAR"><strong>أمان إضافي:</strong> يضيف طبقة إضافية من الأمان، عن طريق جعل الأمر أكثر صعوبة بالنسبة لشخص ما لاختراقك أو التلاعب بمعلوماتك.</li>
-        <li class="language-text en-text" id="securityTextEN" style="direction: ltr;"><strong>Extra Security:</strong> Adds an extra layer of security, by making it more difficult for someone to impersonate you or tamper with your information.</li>
+        <li class="language-text en-text" id="securityTextEN" dir="ltr" style="display: none;"><strong>Extra Security:</strong> Adds an extra layer of security, by making it more difficult for someone to impersonate you or tamper with your information.</li>
         <li class="language-text ar-text" id="privacyTextAR"><strong>زيادة الخصوصية:</strong> يحافظ على خصوصية المعلومات الحساسة.</li>
-        <li class="language-text en-text" id="privacyTextEN" style="direction: ltr;"><strong>Privacy Boost:</strong> Maintains the privacy of sensitive information.</li>
+        <li class="language-text en-text" id="privacyTextEN" dir="ltr" style="display: none;"><strong>Privacy Boost:</strong> Maintains the privacy of sensitive information.</li>
         <li class="language-text ar-text" id="functionalityTextAR"><strong>تحسين الوظائف:</strong> يوفر تجربة أكثر سلاسة ويمكن أن يساعد في حل بعض المشاكل.</li>
-        <li class="language-text en-text" id="functionalityTextEN" style="direction: ltr;"><strong>Improved Functionality:</strong> Provides a more seamless experience and can help resolve certain issues.</li>
+        <li class="language-text en-text" id="functionalityTextEN" dir="ltr" style="display: none;"><strong>Improved Functionality:</strong> Provides a more seamless experience and can help resolve certain issues.</li>
     </ul>
     <h6 class="language-text ar-text" id="noteTextAR">يرجى ملاحظة أن تغيير الجلسات لن يؤثر على عملياتك.</h6>
-    <h6 class="language-text en-text" id="noteTextEN" style="direction: ltr;">Note that changing sessions will not affect your operations.</h6>
+    <h6 class="language-text en-text" id="noteTextEN" dir="ltr" style="display: none;">Note that changing sessions will not affect your operations.</h6>
 </main>
 <script>
     // Language strings
